created banner and modified navbar

--- a/index.html
+++ b/index.html
@@ -3,5 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Faugei Flower Shop</title> 
+  <title>Faugei Flower Shop</title>  
+
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script> 
+
+  <!-- Add font awesome -->
+  <script src="https://kit.fontawesome.com/68f1e7ce6b.js" crossorigin="anonymous"></script>
+
+
+
+
+</head>
+<body class="font-sans bg-[#f6f8fd]">
+
+
+<!-- Navbar -->
+<header class="flex justify-between items-center py-6 px-4 lg:px-[150px]">
   
+  <!-- Logo -->
+  <div class="text-2xl font-bold text-orange-500 flex items-center gap-2">
+    <img src="assets/logo.png" class="w-28" alt="logo" />
+  </div>
+
+  <!-- Cart -->
+  <div class="flex items-center text-gray-800 font-semibold md:hidden gap-1"> <i class="fa-solid fa-cart-shopping"></i> Cart ($56)
+  </div>
+
+  <!-- Menu -->
+  <nav class="hidden md:flex gap-8 text-gray-700 font-medium">
+    <a href="#">Home</a>
+    <a href="#">Shop</a>
+    <a href="#">About us</a>
+    <div class="text-gray-800 font-semibold flex items-center gap-2"> <i class="fa-solid fa-cart-shopping"></i> Cart ($56)
+    </div>
+  </nav>
+</header> 
+
+
+
+
+
+<body> 
+  </html>
