--- a/index.html
+++ b/index.html
@@ -79,6 +79,81 @@
   </div>
 </section>
 
+ 
+
+<!-- Our Plants Section -->
+  <section class="py-16 px-4 lg:px-[150px] text-center"> 
+
+    <div class="max-w-7xl mx-auto">
+      <h2 class="noto-serif-normal text-4xl font-bold mb-4"><span class="text-orange-600">Our</span> Plants</h2>
+      <p class="text-gray-600 max-w-2xl mx-auto mb-12">
+        Indulge your senses with the beauty and fragrance of our fresh flower shop.
+        From classic roses to exotic blooms, we offer a wide variety of fresh.
+      </p> 
+
+
+      <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+        
+        <div class="flex flex-col items-center">
+          <img src="assets/sample-flower-image.png" alt="Lily Blossom" class="mb-4 w-full">
+          <h3 class="text-lg font-medium">Lily Blossom</h3>
+          <p class="font-bold">20 USD</p>
+          <button class="mt-3 bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 w-full">ADD TO CART</button>
+        </div>
+
+        <div class="flex flex-col items-center">
+          <img src="assets/sample-flower-image.png" alt="Lily Blossom" class="mb-4 w-full">
+          <h3 class="text-lg font-medium">Lily Blossom</h3>
+          <p class="font-bold">20 USD</p>
+          <button class="mt-3 bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 w-full">ADD TO CART</button>
+        </div>
+
+        <div class="flex flex-col items-center">
+          <img src="assets/sample-flower-image.png" alt="Lily Blossom" class="mb-4 w-full">
+          <h3 class="text-lg font-medium">Lily Blossom</h3>
+          <p class="font-bold">20 USD</p>
+          <button class="mt-3 bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 w-full">ADD TO CART</button>
+        </div>
+
+        <div class="flex flex-col items-center">
+          <img src="assets/sample-flower-image.png" alt="Lily Blossom" class="mb-4 w-full">
+          <h3 class="text-lg font-medium">Lily Blossom</h3>
+          <p class="font-bold">20 USD</p>
+          <button class="mt-3 bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 w-full">ADD TO CART</button>
+        </div>
+
+        <div class="flex flex-col items-center">
+          <img src="assets/sample-flower-image.png" alt="Lily Blossom" class="mb-4 w-full">
+          <h3 class="text-lg font-medium">Lily Blossom</h3>
+          <p class="font-bold">20 USD</p>
+          <button class="mt-3 bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 w-full">ADD TO CART</button>
+        </div>
+
+        <div class="flex flex-col items-center">
+          <img src="assets/sample-flower-image.png" alt="Lily Blossom" class="mb-4 w-full">
+          <h3 class="text-lg font-medium">Lily Blossom</h3>
+          <p class="font-bold">20 USD</p>
+          <button class="mt-3 bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 w-full">ADD TO CART</button>
+        </div>
+
+        <div class="flex flex-col items-center">
+          <img src="assets/sample-flower-image.png" alt="Lily Blossom" class="mb-4 w-full">
+          <h3 class="text-lg font-medium">Lily Blossom</h3>
+          <p class="font-bold">20 USD</p>
+          <button class="mt-3 bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 w-full">ADD TO CART</button>
+        </div>
+
+        <div class="flex flex-col items-center">
+          <img src="assets/sample-flower-image.png" alt="Lily Blossom" class="mb-4 w-full">
+          <h3 class="text-lg font-medium">Lily Blossom</h3>
+          <p class="font-bold">20 USD</p>
+          <button class="mt-3 bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 w-full">ADD TO CART</button>
+        </div>
+       
+      </div>
+    </div>
+  </section>
+
 
 
 
