--- a/index.html
+++ b/index.html
@@ -152,7 +152,57 @@
        
       </div>
     </div>
+  </section> 
+
+
+
+  
+
+  <!-- Latest Deals -->
+  <section class="py-16 px-4 lg:px-[150px]">
+    <div class="max-w-7xl mx-auto text-center">
+      <h2 class="noto-serif-normal text-4xl font-bold mb-4"><span class="text-orange-600">Latest</span> Deals</h2>
+      <p class="text-gray-600 max-w-2xl mx-auto text-base">
+        Indulge your senses with the beauty and fragrance of our fresh flower shop.
+      </p>
+    </div>
+    <div class="mt-12 grid grid-cols-1 md:grid-cols-3 gap-6 max-w-7xl mx-auto">
+
+      <!-- Deal Cards -->
+      <div class="space-y-6">
+        <div class="relative rounded-lg overflow-hidden h-48 bg-cover bg-center flex items-center justify-center text-center"
+          style="background-image: url('assets/deal-bloom.png');">
+          <div class="bg-black bg-opacity-40 w-full h-full absolute top-0 left-0"></div>
+          <div class="relative z-10">
+            <h3 class="noto-serif-normal text-white text-lg font-semibold">60% Off | Bloom Plant</h3>
+            <a href="#" class="text-white font-semibold underline mt-2 inline-block">Shop Now</a>
+          </div>
+        </div>
+
+        <div class="relative rounded-lg overflow-hidden h-48 bg-cover bg-center flex items-center justify-center text-center"
+          style="background-image: url('assets/deal-ana.png');">
+          <div class="bg-black bg-opacity-40 w-full h-full absolute top-0 left-0"></div>
+          <div class="relative z-10">
+            <h3 class="noto-serif-normal text-white text-lg font-semibold">30% Off | Ana Plant</h3>
+            <a href="#" class="text-white font-semibold underline mt-2 inline-block">Shop Now</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="md:col-span-2">
+        <div class="relative rounded-xl overflow-hidden h-full min-h-[200px] bg-cover bg-center flex items-center justify-center text-center"
+          style="background-image: url('assets/deal-zabo.png');">
+          <div class="bg-black bg-opacity-40 w-full h-full absolute top-0 left-0"></div>
+          <div class="relative z-10">
+            <h3 class="noto-serif-normal text-white text-lg md:text-3xl font-semibold">25% Off | Zabo Plant</h3>
+            <a href="#" class="text-white font-semibold underline mt-2 inline-block text-base md:text-xl">Shop Now</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
+
+
 
 
 
