--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
  <style>
-   
+   @keyframes spin-slow {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    .spin-badge {
+      animation: spin-slow 4s linear infinite;
+    } 
 
     .noto-serif-normal {
   font-family: "Noto Serif", serif;
@@ -155,8 +161,46 @@
   </section> 
 
 
+ <!-- Flower & Plants Lover Section -->
+<section class="bg-[#f6f8fd] px-4 lg:px-[150px] py-16">
+  <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-start md:gap-16 gap-10">
+    
+    <!-- Image -->
+    <div class="relative w-full md:w-[440px] md:h-[480px]">
+      <img src="assets/flower-store.png" alt="Flower Table" class="w-full h-auto md:h-full object-cover" />
+      
+      <img src="assets/trusted-badge.png" alt="Trusted Seller Badge"
+        class="hidden md:block absolute -top-24 -right-20 spin-badge translate-x-1/3 -translate-y-1/3 w-48 h-48 md:filter md:drop-shadow-2xl" />
+    </div>
 
-  
+    <!-- Text -->
+    <div class="w-full md:w-auto">
+      <h3 class="noto-serif-normal text-4xl md:text-5xl font-bold mb-4 text-left">
+        Flower & Plants <br class="hidden md:block" /> Lover
+      </h3>
+      <ul class="space-y-4 text-gray-600 list-disc pl-5 text-base md:text-xl">
+        <li>
+          Indulge your senses with the beauty and <br class="hidden md:block" />
+          fragrance of our fresh flower shop. From classic <br class="hidden md:block" />
+          roses to exotic blooms, we offer a wide variety of fresh.
+        </li>
+        <li>
+          Indulge your senses with the beauty and <br class="hidden md:block" />
+          fragrance of our fresh flower shop. From classic <br class="hidden md:block" />
+          roses to exotic blooms, we offer a wide variety of fresh.
+        </li>
+        <li>
+          Indulge your senses with the beauty and <br class="hidden md:block" />
+          fragrance of our fresh flower shop. From classic <br class="hidden md:block" />
+          roses to exotic blooms, we offer a wide variety of fresh.
+        </li>
+      </ul>
+    </div>
+
+  </div>
+</section>
+
+
 
   <!-- Latest Deals -->
   <section class="py-16 px-4 lg:px-[150px]">
