--- a/index.html
+++ b/index.html
@@ -247,6 +247,18 @@
   </section>
 
 
+<!-- Join Section -->
+  <section class="relative bg-cover bg-center h-[450px]" style="background-image: url('assets/news-letter-bg.png')">
+    <div class="flex flex-col items-center justify-center h-full bg-black bg-opacity-40 text-white px-4">
+      <h1 class="noto-serif-normal text-4xl md:text-5xl font-semibold mb-6 text-center">Join the colorful Bunch</h1>
+      <div class="flex w-full max-w-3xl">
+        <input type="email" placeholder="Write email" class="w-full px-4 py-3 text-gray-800 focus:outline-none" />
+        <button class="bg-orange-600 text-white px-6 py-3 font-medium hover:bg-orange-700">Subscribe</button>
+      </div>
+    </div>
+  </section>
+
+  
 
 
 
