Added responsive footer with logo, navigation links, and social icons

--- a/index.html
+++ b/index.html
@@ -258,10 +258,42 @@
     </div>
   </section>
 
-  
 
+ <!-- Footer -->
+  <footer class="bg-gray-100 py-12 px-4 lg:px-[150px]">
+    <div class="max-w-7xl mx-auto w-full flex flex-col items-start md:grid md:grid-cols-4 gap-10">
+      <div class="md:col-span-1 text-left">
+        <img src="assets/logo.png" alt="Logo" class="mb-4 md:w-auto">
+        <p class="text-gray-600 text-base md:text-xl max-w-xs">
+          Indulge your senses with the beauty and fragrance of our fresh flower shop.
+        </p>
+      </div>
 
+      
+      <div class="md:col-span-3 w-full flex flex-col items-start md:grid md:grid-cols-2 lg:grid-cols-4 gap-8 mt-8 md:mt-0 text-left"> 
+        <ul class="space-y-6 text-gray-700 text-base">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+        <ul class="space-y-6 text-gray-700 text-base">
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">Help Center</a></li>
+        </ul>
+        <div class="flex justify-start items-center gap-6 -mt-2 md:mt-4 col-span-2">
+          <img src="assets/icon-linkedin.png" alt="LinkedIn" class="w-6 h-6" />
+          <img src="assets/icon-twitter.png" alt="Twitter" class="w-6 h-6" />
+          <img src="assets/icon-facebook.png" alt="Facebook" class="w-6 h-6" />
+          <img src="assets/icon-youtube.png" alt="YouTube" class="w-6 h-6" />
+        </div>
+      </div>
+    </div>
+  </footer>
 
-
-<body> 
-  </html>
+</body>
+</html>
