--- a/index.html
+++ b/index.html
@@ -54,14 +54,16 @@
   </div>
 
   <!-- Menu -->
-  <nav class="hidden md:flex gap-8 text-gray-700 font-medium">
-    <a href="#">Home</a>
-    <a href="#">Shop</a>
-    <a href="#">About us</a>
-    <div class="text-gray-800 font-semibold flex items-center gap-2"> <i class="fa-solid fa-cart-shopping"></i> Cart ($56)
-    </div>
-  </nav>
+<nav class="hidden md:flex gap-8 text-gray-700">
+  <a href="#" class="font-semibold">Home</a> <!-- Bold -->
+  <a href="#">Shop</a> <!-- Normal -->
+  <a href="#">About us</a> <!-- Normal -->
+  <div class="text-gray-800 font-semibold flex items-center gap-2">
+    <i class="fa-solid fa-cart-shopping"></i> Cart ($56)
+  </div>
+</nav>
 </header> 
+
 
 <!-- Banner -->
 <section class="flex flex-col-reverse md:flex-row items-center justify-between py-16 px-0 md:px-[150px] gap-10">
